Increase selected tab opacity

When multiple tabs are selected, tabs other than the active
selected tab are made more opaque to mark selection, but the old
opacity of 0.3 was virtually unnoticeable so is here increased.

Bug: 848416
Change-Id: I3b833808a77a11b29c00f69f3827c1a60d3f0eb9
Reviewed-on: https://chromium-review.googlesource.com/1112433
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Commit-Queue: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#569763}
Former-commit-id: dcdd42dd3445ead273ec357ef2fc286e657a0273